# vk_wrapper_c

./: .gitignore  .push.bat.un~  CMakeLists.txt  CMakeSettings.json  README.md  b.bat  bak.7z  buffer.c  buffer.h  camera.c  camera.h  descripor.h  descriptor.c  image.c  image.h  main.c  push.bat  r.bat  render.c  render.h  shader.frag  shader.vert  type_def.h  util.c  util.h  vert_data.c  vert_data.h  vk_core.c  vk_core.h
captures/: tutorial depth buffering runtime.cap  tutorial swapchain recreation runtime.cap  vk wrapper runtime.cap
